--- a/archives/toutiao-search/2024-02-18.md
+++ b/archives/toutiao-search/2024-02-18.md
@@ -1,56 +1,74 @@
 # 2024-02-18
 
-共 204 条
+共 216 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Feb 18 2024 13:00:36 GMT+0800 (China Standard Time) -->
-1. [男子跑进奶茶店撞碎玻璃门](https://so.toutiao.com/search?keyword=男子跑进奶茶店撞碎玻璃门)
+<!-- 最后更新时间 Sun Feb 18 2024 14:00:39 GMT+0800 (China Standard Time) -->
 1. [俄方称俄军已完全控制阿夫杰耶夫卡](https://so.toutiao.com/search?keyword=俄方称俄军已完全控制阿夫杰耶夫卡)
+1. [中国海警在厦金海域开展执法行动](https://so.toutiao.com/search?keyword=中国海警在厦金海域开展执法行动)
 1. [中国经济新春面面观](https://so.toutiao.com/search?keyword=中国经济新春面面观)
-1. [三亚部分返程机票回落至3000元档](https://so.toutiao.com/search?keyword=三亚部分返程机票回落至3000元档)
-1. [两个贾玲对唱](https://so.toutiao.com/search?keyword=两个贾玲对唱)
+1. [乌称从阿夫杰耶夫卡撤军是正确决定](https://so.toutiao.com/search?keyword=乌称从阿夫杰耶夫卡撤军是正确决定)
+1. [因堵车延迟下高速应付全程高速费吗](https://so.toutiao.com/search?keyword=因堵车延迟下高速应付全程高速费吗)
+1. [王毅：统一必将实现](https://so.toutiao.com/search?keyword=王毅：统一必将实现)
+1. [《摔跤吧！爸爸》小芭比塔演员去世](https://so.toutiao.com/search?keyword=《摔跤吧！爸爸》小芭比塔演员去世)
 1. [贾玲烫了大波浪穿礼服唱歌](https://so.toutiao.com/search?keyword=贾玲烫了大波浪穿礼服唱歌)
-1. [小车零点后下高速被收全程费用](https://so.toutiao.com/search?keyword=小车零点后下高速被收全程费用)
-1. [老人旅游时睡梦中去世 家属起诉旅行社](https://so.toutiao.com/search?keyword=老人旅游时睡梦中去世+家属起诉旅行社)
-1. [库里29分力压约内斯库26分夺金腰带](https://so.toutiao.com/search?keyword=库里29分力压约内斯库26分夺金腰带)
+1. [麦克朗谈是否想追逐扣篮大赛三连冠](https://so.toutiao.com/search?keyword=麦克朗谈是否想追逐扣篮大赛三连冠)
 1. [新疆特强沙尘暴：天空赤橙像异世界](https://so.toutiao.com/search?keyword=新疆特强沙尘暴：天空赤橙像异世界)
 1. [丽江文旅立案处理未买手镯被赶下车](https://so.toutiao.com/search?keyword=丽江文旅立案处理未买手镯被赶下车)
-1. [水果越酸维C含量越高？不一定](https://so.toutiao.com/search?keyword=水果越酸维C含量越高？不一定)
-1. [刚服完刑男子杀一家人？警方回应](https://so.toutiao.com/search?keyword=刚服完刑男子杀一家人？警方回应)
+1. [小车零点后下高速被收全程费用](https://so.toutiao.com/search?keyword=小车零点后下高速被收全程费用)
+1. [海鲜与维C不能同吃？谣言](https://so.toutiao.com/search?keyword=海鲜与维C不能同吃？谣言)
 1. [丽江游客回应不买5万玉器被赶下车](https://so.toutiao.com/search?keyword=丽江游客回应不买5万玉器被赶下车)
-1. [王毅：中国从来没有发动过战争](https://so.toutiao.com/search?keyword=王毅：中国从来没有发动过战争)
-1. [大V谈为何业内对Sora悲观](https://so.toutiao.com/search?keyword=大V谈为何业内对Sora悲观)
+1. [刚服完刑男子杀一家人？警方回应](https://so.toutiao.com/search?keyword=刚服完刑男子杀一家人？警方回应)
+1. [两个贾玲对唱](https://so.toutiao.com/search?keyword=两个贾玲对唱)
+1. [堵车把车里的阿拉斯加堵哭了](https://so.toutiao.com/search?keyword=堵车把车里的阿拉斯加堵哭了)
+1. [国产三蹦子今年可能去海外建厂](https://so.toutiao.com/search?keyword=国产三蹦子今年可能去海外建厂)
+1. [教育局回应高三女生称遭班主任猥亵](https://so.toutiao.com/search?keyword=教育局回应高三女生称遭班主任猥亵)
 1. [网友去年就在小区拍到瘦了的贾玲](https://so.toutiao.com/search?keyword=网友去年就在小区拍到瘦了的贾玲)
-1. [以色列总理：反对承认巴勒斯坦国](https://so.toutiao.com/search?keyword=以色列总理：反对承认巴勒斯坦国)
 1. [冯巩在家说了算](https://so.toutiao.com/search?keyword=冯巩在家说了算)
-1. [邱毅谈美军特战小组常驻金门](https://so.toutiao.com/search?keyword=邱毅谈美军特战小组常驻金门)
-1. [《摔跤吧！爸爸》小芭比塔演员去世](https://so.toutiao.com/search?keyword=《摔跤吧！爸爸》小芭比塔演员去世)
-1. [新疆14级大风](https://so.toutiao.com/search?keyword=新疆14级大风)
-1. [王毅：统一必将实现](https://so.toutiao.com/search?keyword=王毅：统一必将实现)
-1. [美联储又多了“按兵不动”的理由](https://so.toutiao.com/search?keyword=美联储又多了“按兵不动”的理由)
-1. [日本女生在中国朋友家过年看抗日剧](https://so.toutiao.com/search?keyword=日本女生在中国朋友家过年看抗日剧)
-1. [机构：明日油价调整或将搁浅](https://so.toutiao.com/search?keyword=机构：明日油价调整或将搁浅)
 1. [魅族宣布全面押注AI](https://so.toutiao.com/search?keyword=魅族宣布全面押注AI)
-1. [中国海警在厦金海域开展执法行动](https://so.toutiao.com/search?keyword=中国海警在厦金海域开展执法行动)
-1. [传比亚迪秦plus dmi将官降到7.98万](https://so.toutiao.com/search?keyword=传比亚迪秦plus+dmi将官降到7.98万)
+1. [台当局叫停赴陆团引起马英九批评](https://so.toutiao.com/search?keyword=台当局叫停赴陆团引起马英九批评)
+1. [邱毅谈美军特战小组常驻金门](https://so.toutiao.com/search?keyword=邱毅谈美军特战小组常驻金门)
+1. [山东将迎大风降温天气](https://so.toutiao.com/search?keyword=山东将迎大风降温天气)
+1. [老人旅游时睡梦中去世 家属起诉旅行社](https://so.toutiao.com/search?keyword=老人旅游时睡梦中去世+家属起诉旅行社)
+1. [高速堵车有司机呼呼大睡](https://so.toutiao.com/search?keyword=高速堵车有司机呼呼大睡)
+1. [新疆14级大风](https://so.toutiao.com/search?keyword=新疆14级大风)
 1. [今年还有4次调休](https://so.toutiao.com/search?keyword=今年还有4次调休)
-1. [孙楠回应《歌手3》退赛事件](https://so.toutiao.com/search?keyword=孙楠回应《歌手3》退赛事件)
-1. [王毅阐述中方在乌克兰危机上的立场](https://so.toutiao.com/search?keyword=王毅阐述中方在乌克兰危机上的立场)
+1. [周杰伦昆凌看霉霉演唱会](https://so.toutiao.com/search?keyword=周杰伦昆凌看霉霉演唱会)
+1. [浙江青田挖笋失联村民已无生命体征](https://so.toutiao.com/search?keyword=浙江青田挖笋失联村民已无生命体征)
+1. [甘肃酒泉4万名滞留旅客已被安置](https://so.toutiao.com/search?keyword=甘肃酒泉4万名滞留旅客已被安置)
+1. [泰国前总理他信获假释](https://so.toutiao.com/search?keyword=泰国前总理他信获假释)
+1. [春节10天花掉大半年积蓄](https://so.toutiao.com/search?keyword=春节10天花掉大半年积蓄)
+1. [传比亚迪秦plus dmi将官降到7.98万](https://so.toutiao.com/search?keyword=传比亚迪秦plus+dmi将官降到7.98万)
 1. [女子输错导航被丈夫怒抛高速](https://so.toutiao.com/search?keyword=女子输错导航被丈夫怒抛高速)
+1. [拜登：乌军撤退是因国会不作为](https://so.toutiao.com/search?keyword=拜登：乌军撤退是因国会不作为)
+1. [8090后的童年回忆玩具](https://so.toutiao.com/search?keyword=8090后的童年回忆玩具)
+1. [日本女生在中国朋友家过年看抗日剧](https://so.toutiao.com/search?keyword=日本女生在中国朋友家过年看抗日剧)
+1. [男子返程在车上忍不住默默流泪](https://so.toutiao.com/search?keyword=男子返程在车上忍不住默默流泪)
+1. [孙楠回应《歌手3》退赛事件](https://so.toutiao.com/search?keyword=孙楠回应《歌手3》退赛事件)
+1. [台媒炒作大陆科考船现身台东部海域](https://so.toutiao.com/search?keyword=台媒炒作大陆科考船现身台东部海域)
+1. [让贾玲觉得幸福的食物是全麦面包](https://so.toutiao.com/search?keyword=让贾玲觉得幸福的食物是全麦面包)
+1. [专家建议上班第一天少干点活](https://so.toutiao.com/search?keyword=专家建议上班第一天少干点活)
+1. [王毅：中国从来没有发动过战争](https://so.toutiao.com/search?keyword=王毅：中国从来没有发动过战争)
+1. [海南离岛小车堵到“∞”型转圈圈](https://so.toutiao.com/search?keyword=海南离岛小车堵到“∞”型转圈圈)
+1. [湖南省南县捣毁一卖淫窝点 6人被抓](https://so.toutiao.com/search?keyword=湖南省南县捣毁一卖淫窝点+6人被抓)
 1. [极兔快递股价跳水](https://so.toutiao.com/search?keyword=极兔快递股价跳水)
+1. [普京向前线士兵发贺电](https://so.toutiao.com/search?keyword=普京向前线士兵发贺电)
+1. [东北的天然大冰箱扛不住了](https://so.toutiao.com/search?keyword=东北的天然大冰箱扛不住了)
+1. [男子跑进奶茶店撞碎玻璃门](https://so.toutiao.com/search?keyword=男子跑进奶茶店撞碎玻璃门)
+1. [三亚部分返程机票回落至3000元档](https://so.toutiao.com/search?keyword=三亚部分返程机票回落至3000元档)
+1. [库里29分力压约内斯库26分夺金腰带](https://so.toutiao.com/search?keyword=库里29分力压约内斯库26分夺金腰带)
+1. [水果越酸维C含量越高？不一定](https://so.toutiao.com/search?keyword=水果越酸维C含量越高？不一定)
+1. [大V谈为何业内对Sora悲观](https://so.toutiao.com/search?keyword=大V谈为何业内对Sora悲观)
+1. [以色列总理：反对承认巴勒斯坦国](https://so.toutiao.com/search?keyword=以色列总理：反对承认巴勒斯坦国)
+1. [美联储又多了“按兵不动”的理由](https://so.toutiao.com/search?keyword=美联储又多了“按兵不动”的理由)
+1. [机构：明日油价调整或将搁浅](https://so.toutiao.com/search?keyword=机构：明日油价调整或将搁浅)
+1. [王毅阐述中方在乌克兰危机上的立场](https://so.toutiao.com/search?keyword=王毅阐述中方在乌克兰危机上的立场)
 1. [德民众呼吁美西方停止拱火俄乌冲突](https://so.toutiao.com/search?keyword=德民众呼吁美西方停止拱火俄乌冲突)
 1. [三预警齐发！我国大部地区剧烈降温](https://so.toutiao.com/search?keyword=三预警齐发！我国大部地区剧烈降温)
-1. [甘肃酒泉4万名滞留旅客已被安置](https://so.toutiao.com/search?keyword=甘肃酒泉4万名滞留旅客已被安置)
-1. [8090后的童年回忆玩具](https://so.toutiao.com/search?keyword=8090后的童年回忆玩具)
-1. [春节10天花掉大半年积蓄](https://so.toutiao.com/search?keyword=春节10天花掉大半年积蓄)
 1. [OPPO创始人：2024年是AI手机元年](https://so.toutiao.com/search?keyword=OPPO创始人：2024年是AI手机元年)
 1. [湖南开展解放思想大讨论](https://so.toutiao.com/search?keyword=湖南开展解放思想大讨论)
 1. [春节返程那些让人泪目的离别瞬间](https://so.toutiao.com/search?keyword=春节返程那些让人泪目的离别瞬间)
 1. [钱塘江灌溉潮汐树宛如“巨龙复活”](https://so.toutiao.com/search?keyword=钱塘江灌溉潮汐树宛如“巨龙复活”)
-1. [专家建议上班第一天少干点活](https://so.toutiao.com/search?keyword=专家建议上班第一天少干点活)
-1. [国产三蹦子今年可能去海外建厂](https://so.toutiao.com/search?keyword=国产三蹦子今年可能去海外建厂)
-1. [浙江青田挖笋失联村民已无生命体征](https://so.toutiao.com/search?keyword=浙江青田挖笋失联村民已无生命体征)
-1. [男子返程在车上忍不住默默流泪](https://so.toutiao.com/search?keyword=男子返程在车上忍不住默默流泪)
 1. [乌总统称乌军持续面临武器短缺问题](https://so.toutiao.com/search?keyword=乌总统称乌军持续面临武器短缺问题)
 1. [海南游客“八仙过海”曲线回家](https://so.toutiao.com/search?keyword=海南游客“八仙过海”曲线回家)
 1. [海口三港实时待渡车辆约5400车辆](https://so.toutiao.com/search?keyword=海口三港实时待渡车辆约5400车辆)
@@ -59,13 +77,11 @@
 1. [节后上班的你精神状态如何](https://so.toutiao.com/search?keyword=节后上班的你精神状态如何)
 1. [狗子在高速被堵到生下一窝狗崽](https://so.toutiao.com/search?keyword=狗子在高速被堵到生下一窝狗崽)
 1. [刚服完刑男子杀一家人？官方通报](https://so.toutiao.com/search?keyword=刚服完刑男子杀一家人？官方通报)
-1. [湖南省南县捣毁一卖淫窝点 6人被抓](https://so.toutiao.com/search?keyword=湖南省南县捣毁一卖淫窝点+6人被抓)
 1. [乌军撤出阿城 记者深入当地](https://so.toutiao.com/search?keyword=乌军撤出阿城+记者深入当地)
 1. [河南警方悬赏5万缉捕重大刑案嫌犯](https://so.toutiao.com/search?keyword=河南警方悬赏5万缉捕重大刑案嫌犯)
 1. [《热辣滚烫》贾玲的对手是云南姑娘](https://so.toutiao.com/search?keyword=《热辣滚烫》贾玲的对手是云南姑娘)
 1. [网友称过年去澳洲帮带娃女婿不感恩](https://so.toutiao.com/search?keyword=网友称过年去澳洲帮带娃女婿不感恩)
 1. [女子返程高速4小时走了两三公里](https://so.toutiao.com/search?keyword=女子返程高速4小时走了两三公里)
-1. [海南离岛小车堵到“∞”型转圈圈](https://so.toutiao.com/search?keyword=海南离岛小车堵到“∞”型转圈圈)
 1. [抢先体验仰望U9](https://so.toutiao.com/search?keyword=抢先体验仰望U9)
 1. [中国UFC大级别首胜](https://so.toutiao.com/search?keyword=中国UFC大级别首胜)
 1. [女子把马桶坐坏遭全家人围观](https://so.toutiao.com/search?keyword=女子把马桶坐坏遭全家人围观)
@@ -74,7 +90,6 @@
 1. [健康饮食小妙招](https://so.toutiao.com/search?keyword=健康饮食小妙招)
 1. [美国抗议者在佩洛西家门口倒粪](https://so.toutiao.com/search?keyword=美国抗议者在佩洛西家门口倒粪)
 1. [十四冬开幕式高清大图欣赏](https://so.toutiao.com/search?keyword=十四冬开幕式高清大图欣赏)
-1. [普京向前线士兵发贺电](https://so.toutiao.com/search?keyword=普京向前线士兵发贺电)
 1. [Sora刷屏 哪些A股上市公司或将受益](https://so.toutiao.com/search?keyword=Sora刷屏+哪些A股上市公司或将受益)
 1. [王毅：搞“去中国化”将犯历史性错误](https://so.toutiao.com/search?keyword=王毅：搞“去中国化”将犯历史性错误)
 1. [湖北过年喝热的姜丝可乐](https://so.toutiao.com/search?keyword=湖北过年喝热的姜丝可乐)
@@ -99,14 +114,12 @@
 1. [国台办再回应2名大陆渔民遇难](https://so.toutiao.com/search?keyword=国台办再回应2名大陆渔民遇难)
 1. [王毅面对慕安会主席的邀请开怀大笑](https://so.toutiao.com/search?keyword=王毅面对慕安会主席的邀请开怀大笑)
 1. [过年你花了多少钱](https://so.toutiao.com/search?keyword=过年你花了多少钱)
-1. [乌称从阿夫杰耶夫卡撤军是正确决定](https://so.toutiao.com/search?keyword=乌称从阿夫杰耶夫卡撤军是正确决定)
 1. [高速上堵车 货车师傅开始做饭了](https://so.toutiao.com/search?keyword=高速上堵车+货车师傅开始做饭了)
 1. [接连四部电影宣布撤出春节档](https://so.toutiao.com/search?keyword=接连四部电影宣布撤出春节档)
 1. [甘肃酒泉全力安置数万名滞留旅客](https://so.toutiao.com/search?keyword=甘肃酒泉全力安置数万名滞留旅客)
 1. [龙年这波玩的有点秀](https://so.toutiao.com/search?keyword=龙年这波玩的有点秀)
 1. [王毅：巴勒斯坦几代民众颠沛流离](https://so.toutiao.com/search?keyword=王毅：巴勒斯坦几代民众颠沛流离)
 1. [多家巨头谋划布局AI基础设施](https://so.toutiao.com/search?keyword=多家巨头谋划布局AI基础设施)
-1. [高速堵车有司机呼呼大睡](https://so.toutiao.com/search?keyword=高速堵车有司机呼呼大睡)
 1. [欢乐家长群戴静公司强制捐款](https://so.toutiao.com/search?keyword=欢乐家长群戴静公司强制捐款)
 1. [罗德里英超中对Big6已打进5球](https://so.toutiao.com/search?keyword=罗德里英超中对Big6已打进5球)
 1. [大学生寒假给爷爷奶奶劈柴700多斤](https://so.toutiao.com/search?keyword=大学生寒假给爷爷奶奶劈柴700多斤)
@@ -129,7 +142,6 @@
 1. [航运公司回应被指过海效率低](https://so.toutiao.com/search?keyword=航运公司回应被指过海效率低)
 1. [“断亲潮”风靡 需对亲情重新反思](https://so.toutiao.com/search?keyword=“断亲潮”风靡+需对亲情重新反思)
 1. [女子高速上遭遇沙尘暴 车窗被砸烂](https://so.toutiao.com/search?keyword=女子高速上遭遇沙尘暴+车窗被砸烂)
-1. [让贾玲觉得幸福的食物是全麦面包](https://so.toutiao.com/search?keyword=让贾玲觉得幸福的食物是全麦面包)
 1. [正月初九祝福久久](https://so.toutiao.com/search?keyword=正月初九祝福久久)
 1. [女子过完年后归家发现厨房污水倒灌](https://so.toutiao.com/search?keyword=女子过完年后归家发现厨房污水倒灌)
 1. [蓝军打破在伊蒂哈德402分钟进球荒](https://so.toutiao.com/search?keyword=蓝军打破在伊蒂哈德402分钟进球荒)
